resources/clusters/staging/rhobss01uw2/metrics/bundle/02-operator-controller-manager-Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: manager
    app.kubernetes.io/created-by: thanos-operator
    app.kubernetes.io/instance: controller-manager
    app.kubernetes.io/managed-by: rhobs
    app.kubernetes.io/name: deployment
    app.kubernetes.io/part-of: thanos-operator
    control-plane: controller-manager
  name: thanos-operator-controller-manager
  namespace: rhobs-stage
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      control-plane: controller-manager
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/default-container: manager
      labels:
        control-plane: controller-manager
    spec:
      containers:
      - args:
        - --leader-elect
        - --enable-feature=prometheus-rule
        - --metrics-bind-address=:8080
        - --health-probe-bind-address=:8081
        - --log.format=logfmt
        - --log.level=debug
        command:
        - /manager
        image: quay.io/redhat-services-prod/rhobs-mco-tenant/rhobs-thanos-operator:f3bf7ba94eece805c4cae6af87648aade236d746
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /healthz
            port: 8081
            scheme: HTTP
          initialDelaySeconds: 15
          periodSeconds: 20
          successThreshold: 1
          timeoutSeconds: 1
        name: manager
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /readyz
            port: 8081
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          limits:
            cpu: 600m
            memory: 1Gi
          requests:
            cpu: 50m
            memory: 64Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
      - args:
        - --secure-listen-address=0.0.0.0:8443
        - --upstream=http://127.0.0.1:8080/
        - --v=4
        - --tls-cert-file=/etc/tls/private/tls.crt
        - --tls-private-key-file=/etc/tls/private/tls.key
        - --client-ca-file=/etc/service-ca/service-ca.crt
        - --config-file=/etc/config/config.yaml
        image: registry.redhat.io/openshift4/ose-kube-rbac-proxy@sha256:98455d503b797b6b02edcfd37045c8fab0796b95ee5cf4cfe73b221a07e805f0
        imagePullPolicy: IfNotPresent
        name: kube-rbac-proxy
        ports:
        - containerPort: 8443
          name: https
          protocol: TCP
        resources:
          limits:
            cpu: 50m
            memory: 64Mi
          requests:
            cpu: 25m
            memory: 32Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
        volumeMounts:
        - mountPath: /etc/tls/private
          name: tls
          readOnly: true
        - mountPath: /etc/service-ca
          name: service-ca
          readOnly: true
        - mountPath: /etc/config
          name: config
          readOnly: true
      securityContext:
        runAsNonRoot: true
      serviceAccountName: thanos-operator-controller-manager
      terminationGracePeriodSeconds: 10
      volumes:
      - name: tls
        secret:
          defaultMode: 420
          optional: false
          secretName: kube-rbac-proxy-tls
      - configMap:
          defaultMode: 420
          name: openshift-service-ca.crt
          optional: false
        name: service-ca
      - configMap:
          defaultMode: 420
          name: thanos-operator-rbac-config
          optional: false
        name: config
status: {}
