resources/clusters/staging/rhobss01uw2/metrics/bundle/03-cache-query-range-cache-StatefulSet.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app.kubernetes.io/component: memcached
    app.kubernetes.io/instance: rhobs
    app.kubernetes.io/name: thanos-query-range-cache
    app.kubernetes.io/part-of: rhobs
    app.kubernetes.io/version: 1.5-316
  name: thanos-query-range-cache
  namespace: rhobs-stage
spec:
  podManagementPolicy: OrderedReady
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: memcached
      app.kubernetes.io/instance: rhobs
      app.kubernetes.io/name: thanos-query-range-cache
      app.kubernetes.io/part-of: rhobs
      app.kubernetes.io/version: 1.5-316
  serviceName: thanos-query-range-cache
  template:
    metadata:
      labels:
        app.kubernetes.io/component: memcached
        app.kubernetes.io/instance: rhobs
        app.kubernetes.io/name: thanos-query-range-cache
        app.kubernetes.io/part-of: rhobs
        app.kubernetes.io/version: 1.5-316
    spec:
      containers:
      - args:
        - -m 8048
        - -c 100000
        - -I 5m
        - -v
        image: registry.redhat.io/rhel8/memcached:1.5-316
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 6
          initialDelaySeconds: 30
          periodSeconds: 10
          tcpSocket:
            port: 11211
        name: memcached
        ports:
        - containerPort: 11211
          name: client
          protocol: TCP
        readinessProbe:
          failureThreshold: 6
          initialDelaySeconds: 5
          periodSeconds: 5
          successThreshold: 1
          tcpSocket:
            port: 11211
          timeoutSeconds: 3
        resources: {}
        terminationMessagePolicy: FallbackToLogsOnError
      - args:
        - --memcached.address=localhost:11211
        - --web.listen-address=0.0.0.0:9150
        image: quay.io/prometheus/memcached-exporter:v0.15.0
        imagePullPolicy: IfNotPresent
        name: exporter
        ports:
        - containerPort: 9150
          name: metrics
          protocol: TCP
        resources: {}
      securityContext: {}
      serviceAccountName: thanos-query-range-cache
  updateStrategy: {}
status:
  availableReplicas: 0
  replicas: 0
