resources/clusters/staging/rhobss01uw2/metrics/bundle/02-operator-controller-manager-metrics-service-Service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.beta.openshift.io/serving-cert-secret-name: kube-rbac-proxy-tls
  labels:
    app.kubernetes.io/component: kube-rbac-proxy
    app.kubernetes.io/created-by: thanos-operator
    app.kubernetes.io/instance: controller-manager-metrics-service
    app.kubernetes.io/managed-by: rhobs
    app.kubernetes.io/name: service
    app.kubernetes.io/part-of: thanos-operator
    control-plane: controller-manager
  name: thanos-operator-controller-manager-metrics-service
  namespace: rhobs-stage
spec:
  ports:
  - name: https
    port: 8443
    protocol: TCP
    targetPort: https
  selector:
    control-plane: controller-manager
status:
  loadBalancer: {}
