resources/clusters/staging/rhobss01uw2/metrics/bundle/03-cache-query-range-cache-Service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: memcached
    app.kubernetes.io/instance: rhobs
    app.kubernetes.io/name: thanos-query-range-cache
    app.kubernetes.io/part-of: rhobs
    app.kubernetes.io/version: 1.5-316
  name: thanos-query-range-cache
  namespace: rhobs-stage
spec:
  clusterIP: None
  ports:
  - name: client
    port: 11211
    protocol: TCP
    targetPort: 11211
  - name: metrics
    port: 9150
    protocol: TCP
    targetPort: 9150
  selector:
    app.kubernetes.io/component: memcached
    app.kubernetes.io/instance: rhobs
    app.kubernetes.io/name: thanos-query-range-cache
    app.kubernetes.io/part-of: rhobs
    app.kubernetes.io/version: 1.5-316
status:
  loadBalancer: {}
